--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">5,911</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">4,615</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.chiselon.colourclassifieds.uiTest.ColourClassifiedsTest</td><td><a href="#m0">colourClassifiedsRegistration</a></td><td rowspan="1">1521301581734</td><td rowspan="1">5868</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.chiselon.colourclassifieds.uiTest.ColourClassifiedsTest</td><td><a href="#m0">colourClassifiedsRegistration</a></td><td rowspan="1">1521733578444</td><td rowspan="1">2241</td></tr><tr class="passedeven"><td><a href="#m1">latestadssize</a></td><td rowspan="1">1521733580689</td><td rowspan="1">2325</td></tr></tbody>
 </table>
 <h2>Default test</h2><h3 id="m0">com.chiselon.colourclassifieds.uiTest.ColourClassifiedsTest#colourClassifiedsRegistration</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.chiselon.colourclassifieds.uiTest.ColourClassifiedsTest#latestadssize</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
