--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Anusha\AppData\Local\Temp\testng-eclipse--1003386166\testng-customsuite.xml</span>
+                    <span>C:\Users\INDIA\AppData\Local\Temp\testng-eclipse-657735845\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,6 +103,11 @@
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.chiselon.colourclassifieds.uiTest.ColourClassifiedsTest" hash-for-method="colourClassifiedsRegistration">colourClassifiedsRegistration</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.chiselon.colourclassifieds.uiTest.ColourClassifiedsTest" hash-for-method="latestadssize">latestadssize</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -130,12 +135,19 @@
                   <span class="method-name">colourClassifiedsRegistration</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="latestadssize">
+                  </a> <!-- latestadssize -->
+                  <span class="method-name">latestadssize</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Anusha\AppData\Local\Temp\testng-eclipse--1003386166\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\INDIA\AppData\Local\Temp\testng-eclipse-657735845\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -184,16 +196,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'colourClassifiedsRegistration')
+data.setCell(0, 1, 'latestadssize')
 data.setCell(0, 2, 'com.chiselon.colourclassifieds.uiTest.ColourClassifiedsTest')
-data.setCell(0, 3, 5868);
+data.setCell(0, 3, 2325);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'colourClassifiedsRegistration')
+data.setCell(1, 2, 'com.chiselon.colourclassifieds.uiTest.ColourClassifiedsTest')
+data.setCell(1, 3, 2241);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -223,6 +239,10 @@ return data;
               <div class="test-method">
                 <span class="method-name">colourClassifiedsRegistration</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">latestadssize</span>
+                <span class="method-start">2245 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
